<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".comments.activity.CommentsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_comments_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/str_comments"
            app:subtitle="@string/str_sub_title_for_issues"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary"
            app:subtitleTextColor="@android:color/white"
            app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"/>

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/txt_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:layout_marginLeft="5dp"
        android:text="@string/str_label_issue_desc"
        android:padding="5dp"
        android:textColor="@color/color_orange"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/str_comments"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/color_blue"
        android:drawableEnd="@drawable/ic_baseline_arrow_downward_24"
        android:drawablePadding="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txt_issue_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_issue_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        tools:text="kcbwkvbwkevbwvbwkbv"
        android:padding="5dp"
        android:textColor="@color/color_orange"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintStart_toEndOf="@+id/txt_issue"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_comments"/>


</androidx.constraintlayout.widget.ConstraintLayout>