<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    card_view:cardUseCompatPadding="true"
    card_view:elevation="5dip"
    android:id="@+id/issue_card_view">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98"/>

        <TextView
            android:id="@+id/txt_issue_title"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Ping And pong"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/color_orange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/chip_count"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4"
            app:chipBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_2"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="@color/color_orange"
            app:chipStrokeWidth="1dp"
            app:chipIcon="@drawable/ic_baseline_chat_bubble_outline_24"/>



        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/txt_issue_title"
            app:layout_constraintBottom_toTopOf="@+id/txt_issue_desc"
            app:shapeAppearanceOverlay="@style/CornerSize" />

        <TextView
            android:id="@+id/txt_issue_user_name"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="ABCD"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="@+id/img_user_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/img_user_avatar"
            app:layout_constraintEnd_toStartOf="@id/chip_count"
            app:layout_constraintStart_toEndOf="@+id/img_user_avatar"/>

        <TextView
            android:id="@+id/txt_issue_desc"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Description"
            app:layout_constraintTop_toBottomOf="@+id/barrier_1"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"/>

        <TextView
            android:id="@+id/txt_issue_updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_label_updated_dt"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_issue_updated_at_dt"
            app:layout_constraintTop_toBottomOf="@+id/txt_issue_desc"/>

        <TextView
            android:id="@+id/txt_issue_updated_at_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="08-07-2022"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@+id/txt_issue_desc"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="txt_issue_read_less,txt_issue_read_more"/>

        <TextView
            style="@style/textStyle"
            android:id="@+id/txt_issue_read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_label_read_more"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@+id/txt_issue_user_name"/>

        <TextView
            style="@style/textStyle"
            android:id="@+id/txt_issue_read_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_label_read_less"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_up_24"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@+id/txt_issue_user_name"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>